<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_menu_listAllEvent"
            android:icon="@drawable/ic_all_event"
            android:title="@string/nav_menu_listAllEvent"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history_event" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistic"
            android:title="@string/nav_static_event" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>



</menu>
